test/fixtures/apps/fails/not-a-response.js
addEventListener('fetch', function (event) {
  event.respondWith('whatever')
})